created ajax requests for sidenav

--- a/blog/review/templates/review/index.html
+++ b/blog/review/templates/review/index.html
@@ -97,88 +97,87 @@
     </div>
 </div>
 
-  <div class="container pull-right sidebar">
-  <div>
-    <a href="">Binary Search<br></a>
-    <a href="">Quick Sork<br></a>
-    <a href="">Suffix Array<br></a>
-    <a href="">Knuth-Morris-Pratt Algorith (KMP)<br></a>
-    <a href="">Rabin-Karp Algorith<br></a>
-    <a href="">Tries<br></a>
-    <a href="">Deapth First Traversal of a graph<br></a>
-    <a href="">Breadth First Traversal of a graph<br></a>
-    <a href="">Dijkstra's Algorith<br></a>
-    <a href="">Binary Indexed Tree<br></a>
-    <a href="">Segment Tree ( with lazy propogation )<br></a>
-    <a href="">Z Algorith<br></a>
-    <a href="">Floyd Warshall Algorithm<br></a>
-    <a href="">Heap /Priority Queue/ Heapsort<br></a>
-    <a href="">Modular Multiplicative Inverse<br></a>
-    <a href="">Binamial Coefficients<br></a>
-    <a href="">Suffix Automation<br></a>
-    <a href="">Lowest Common Ancestor<br></a>
-    <a href="">Counting Inversions<br></a>
-    <a href="">Euclid's Extended Algorithm<br></a>
-    <a href="">Suffix Tree<br></a>
-    <a href="">Dynamic Programming<br></a>
-    <a href="">Basic Data Structures<br></a>
-    <a href="">Logarithmic Exponentiation<br></a>
-    <a href="">Graphs<br></a>
-    <a href="">Minimum Spanning Tree<br></a>
-    <a href="">Efficient Prime Factorization<br></a>
-    <a href="">Combinatorics<br></a>
-    <a href="">Knapsack Problem<br></a>
-    <a href="">Aho-Corasick String Matching Algrithm<br></a>
-    <a href="">Strongly Connected Components<br></a>
-    <a href="">Bellman Ford Algorithm<br></a>
-    <a href="">Heacy-ligth Decomposition<br></a>
-    <a href="">Convex Hull<br></a>
-    <a href="">Line Intersection<br></a>
-    <a href="">Sieve of Erastothenes<br></a>
-    <a href="">Interval Tree<br></a>
-    <a href="">Counting Sort<br></a>
-    <a href="">Probabilities<br></a>
-    <a href="">Matrix Exponentiation<br></a>
-    <a href="">Network Flow<br></a>
-    <a href="">K-D Tree<br></a>
-    <a href="">Deque<br></a>
-    <a href="">Binary Search Tree<br></a>
-    <a href="">Quick Select<br></a>
-    <a href="">Treap/Cartesian Tree<br></a>
-    <a href="">Game Theory<br></a>
-    <a href="">STL<br></a>
-    <a href="">Maximum Bipartitle Matching<br></a>
-    <a href="">Manacher's Algorithm<br></a>
-    <a href="">Miller-Rabin Primality Test:Code<br></a>
-    <a href="">Stable Marrage Problem<br></a>
-    <a href="">Hungarian Algorithm, Tutorial<br></a>
-    <a href="">Sweep Line Algirithm<br></a>
-    <a href="">LCP<br></a>
-    <a href="">Gaussian Elimination<br></a>
-    <a href="">Pollard Pho Integer Factorization Problem<br></a>
-    <a href="">Topological Sorting<br></a>
-    <a href="">Detecting Cycles in a Graph:Directed<br></a>
-    <a href="">Geometry<br></a>
-    <a href="">Backtracing<br></a>
-    <a href="">Euleran and Hamiltonian Paths<br></a>
-    <a href="">Graph Coloring<br></a>
-    <a href="">Meet in the Middle<br></a>
-    <a href="">Arbitary Precision Integer<br></a>
-    <a href="">Radix Sort and Bucket Sort<br></a>
-    <a href="">Johnson's Algorithm<br></a>
-    <a href="">Maximal Matching in a General Graph<br></a>
-    <a href="">Recursion<br></a>
-    <a href="">Inclusive and Exclusive Principle<br></a>
-    <a href="">Co-ordinate Compression<br></a>
-    <a href="">Sqrt-Decomposition<br></a>
-    <a href="">Link-Cut Tree<br></a>
-    <a href="">Euler's Totient Function<br></a>
-    <a href="">Burnside Lemma<br></a>
-    <a href="">Edit/Levenshtein Distance<br></a>
-    <a href="">Banch and Bound<br></a>
-    <a href="">Math for Competitve Programming<br></a>
-    <a href="">Mo's Algorithm<br></a>
-  </div>
+  <div style="padding-top:20px" class="container pull-right sidebar">
+    <a id="InSort" href=""><b>Insersion Sort</b></a><br></a>
+    <a href=""><b>Binary Search</b><br></a>
+    <a href=""><b>Quick Sork</b><br></a>
+    <a href=""><b>Suffix Array</b><br></a>
+    <a href=""><b>Knuth-Morris-Pratt Algorith (KMP)</b><br></a>
+    <a href=""><b>Rabin-Karp Algorith</b><br></a>
+    <a href=""><b>Tries</b><br></a>
+    <a href=""><b>Deapth First Traversal of a graph</b><br></a>
+    <a href=""><b>Breadth First Traversal of a graph</b><br></a>
+    <a href=""><b>Dijkstra's Algorith</b><br></a>
+    <a href=""><b>Binary Indexed Tree</b><br></a>
+    <a href=""><b>Segment Tree ( with lazy propogation )</b><br></a>
+    <a href=""><b>Z Algorith</b><br></a>
+    <a href=""><b>Floyd Warshall Algorithm</b><br></a>
+    <a href=""><b>Heap /Priority Queue/ Heapsort</b><br></a>
+    <a href=""><b>Modular Multiplicative Inverse</b><br></a>
+    <a href=""><b>Binamial Coefficients</b><br></a>
+    <a href=""><b>Suffix Automation</b><br></a>
+    <a href=""><b>Lowest Common Ancestor</b><br></a>
+    <a href=""><b>Counting Inversions</b><br></a>
+    <a href=""><b>Euclid's Extended Algorithm</b><br></a>
+    <a href=""><b>Suffix Tree</b><br></a>
+    <a href=""><b>Dynamic Programming</b><br></a>
+    <a href=""><b>Basic Data Structures</b><br></a>
+    <a href=""><b>Logarithmic Exponentiation</b><br></a>
+    <a href=""><b>Graphs</b><br></a>
+    <a href=""><b>Minimum Spanning Tree</b><br></a>
+    <a href=""><b>Efficient Prime Factorization</b><br></a>
+    <a href=""><b>Combinatorics</b><br></a>
+    <a href=""><b>Knapsack Problem</b><br></a>
+    <a href=""><b>Aho-Corasick String Matching Algrithm</b><br></a>
+    <a href=""><b>Strongly Connected Components</b><br></a>
+    <a href=""><b>Bellman Ford Algorithm</b><br></a>
+    <a href=""><b>Heacy-ligth Decomposition</b><br></a>
+    <a href=""><b>Convex Hull</b><br></a>
+    <a href=""><b>Line Intersection</b><br></a>
+    <a href=""><b>Sieve of Erastothenes</b><br></a>
+    <a href=""><b>Interval Tree</b><br></a>
+    <a href=""><b>Counting Sort</b><br></a>
+    <a href=""><b>Probabilities</b><br></a>
+    <a href=""><b>Matrix Exponentiation</b><br></a>
+    <a href=""><b>Network Flow</b><br></a>
+    <a href=""><b>K-D Tree</b><br></a>
+    <a href=""><b>Deque</b><br></a>
+    <a href=""><b>Binary Search Tree</b><br></a>
+    <a href=""><b>Quick Select</b><br></a>
+    <a href=""><b>Treap/Cartesian Tree</b><br></a>
+    <a href=""><b>Game Theory</b><br></a>
+    <a href=""><b>STL</b><br></a>
+    <a href=""><b>Maximum Bipartitle Matching</b><br></a>
+    <a href=""><b>Manacher's Algorithm</b><br></a>
+    <a href=""><b>Miller-Rabin Primality Test:Code</b><br></a>
+    <a href=""><b>Stable Marrage Problem</b><br></a>
+    <a href=""><b>Hungarian Algorithm, Tutorial</b><br></a>
+    <a href=""><b>Sweep Line Algirithm</b><br></a>
+    <a href=""><b>LCP</b><br></a>
+    <a href=""><b>Gaussian Elimination</b><br></a>
+    <a href=""><b>Pollard Pho Integer Factorization Problem</b><br></a>
+    <a href=""><b>Topological Sorting</b><br></a>
+    <a href=""><b>Detecting Cycles in a Graph:Directed</b><br></a>
+    <a href=""><b>Geometry</b><br></a>
+    <a href=""><b>Backtracing</b><br></a>
+    <a href=""><b>Euleran and Hamiltonian Paths</b><br></a>
+    <a href=""><b>Graph Coloring</b><br></a>
+    <a href=""><b>Meet in the Middle</b><br></a>
+    <a href=""><b>Arbitary Precision Integer</b><br></a>
+    <a href=""><b>Radix Sort and Bucket Sort</b><br></a>
+    <a href=""><b>Johnson's Algorithm</b><br></a>
+    <a href=""><b>Maximal Matching in a General Graph</b><br></a>
+    <a href=""><b>Recursion</b><br></a>
+    <a href=""><b>Inclusive and Exclusive Principle</b><br></a>
+    <a href=""><b>Co-ordinate Compression</b><br></a>
+    <a href=""><b>Sqrt-Decomposition</b><br></a>
+    <a href=""><b>Link-Cut Tree</b><br></a>
+    <a href=""><b>Euler's Totient Function</b><br></a>
+    <a href=""><b>Burnside Lemma</b><br></a>
+    <a href=""><b>Edit/Levenshtein Distance</b><br></a>
+    <a href=""><b>Banch and Bound</b><br></a>
+    <a href=""><b>Math for Competitve Programming</b><br></a>
+    <a href=""><b>Mo's Algorithm</b><br></a>
 </div>
 </div>
 
@@ -201,9 +200,5 @@
     <script src="/static/js/bootstrap.min.js"></script>
     <!--functions created by me -->
     <script src="/static/js/base.js"></script>
-    <script>
-      document.onload(document.getElementById('stars').innerHTML = parseFloat(document.getElementById('stars').innerHTML).toFixed(2)) // restrict the stars value to 2 decimal places       
-    </script>
-    
   </body>
 </html>
