made working comment buttons

--- a/blog/review/static/css/base.css
+++ b/blog/review/static/css/base.css
@@ -72,3 +72,29 @@ body{
   color:white;
 }
 
+.comment {
+
+  padding:4px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
+  box-shadow: 0 1px 1px #337ab7;
+  display: none;
+}
+
+.comment-btn {
+
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
+}
+
+.panel {
+
+  margin-bottom: 0px;
+}
+.inside-content{
+
+  margin-bottom:20px;
+
+}
